--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
             consequat. Duis aute irure dolor in
           </p>
         </div>
+      </div class="audio-block">
+      <img src="=/img/man-avatar.png" alt="">
+      </div> class="audio-container">
+      <img src="/img/audio.png" class="audio-track" alt="">
+      <a href="#" class="play-btn">
+        <img src="/img/icons/play.svg" alt="">
+      </a>
     </div>
+
+  </div>
+    <h2 class="about-title">Testimonial</h2>
+    <span class="about-subtitle">Tom Hope</span>
+    </div>
+  </section>
   </header>
 </body>
 </html>
