--- a/index.html
+++ b/index.html
@@ -27,52 +27,74 @@
           </li>
         </ul>
       </nav>
-      <!-- Конец навигации -->
       <section class="header-title">
         <span class="header-subtitle-text">featured class</span>
         <h1 class="header-title-text">
-          The role of
-          User Interface
-          Designer
+          The role of User Interface Designer
         </h1>
-      
         <a href="#" class="join">
           <img src="/img/icons/arrow.svg" alt="">
           <span class="join-text">Join <br> The Class</span>
         </a>
       </section>
-      <!-- Конец 2 секции -->
       <section class="header-info-block">
         <div class="card-info">
-          <img src="/img/girl-avatar.png" alt="girl" class="card-info-img">
+          <img src="/img/girl-avatar.png" alt="" class="card-info-img">
           <h2 class="info-title">Karen William</h2>
           <span class="info-subtitle">Senior Designer</span>
         </div>
-        <div class="about-info">....
-        </div>
-      </section>
-      <div class="about-info">
-        <div class="about-text-wrapper">
-          <span class="info-subtitle">About</span>
-          <p class="about-desc">quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in
-          </p>
-        </div>
-      </div class="audio-block">
-      <img src="=/img/man-avatar.png" alt="">
-      </div> class="audio-container">
-      <img src="/img/audio.png" class="audio-track" alt="">
-      <a href="#" class="play-btn">
-        <img src="/img/icons/play.svg" alt="">
-      </a>
-    </div>
 
-  </div>
-    <h2 class="about-title">Testimonial</h2>
-    <span class="about-subtitle">Tom Hope</span>
+        <div class="card-about">
+          <div class="about-text-wrapper">
+            <span class="about-subtitle-text">About</span>
+            <p class="about-desc">
+              quis nostrud exercitation ullamco
+              laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in
+            </p>
+          </div>
+
+          <div class="audio-holder">
+            <div class="audio-block">
+              <img src="/img/man-avatar.png" alt="">
+              <div class="audio-container">
+                <div class="audio-detail">
+                  <div class="control">
+                    <i class="fi-rr-play" id="playPause"></i>
+                  </div>
+                  <div id="wave"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="audio-author">
+              <div>
+                <h2 class="about-title">Testimonial</h2>
+                <span class="about-subtitle">Tom Hope</span>
+              </div>
+
+              <div class="time">
+                <span id="current">0:00</span> /
+                <span id="duration">0:00</span>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section> <!-- Конец .header-info-block -->
     </div>
-  </section>
   </header>
+  <script src="wavesurfer.js"></script>
+  <script src="media.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
